--- a/compose.yml
+++ b/compose.yml
@@ -7,12 +7,12 @@ services:
       replicas: 1
     ports:
       - "3000:3000"
+    env_files:
+      - server.env
   nginx:
     #image: "nginx:latest"
     image: "ddmal/webhook-server:nginx"
     deploy:
       replicas: 1
-    #volumes:
-    #  - "./Nginx/webhook.conf:/etc/nginx/conf.d/webhook.conf"
     ports:
       - "5000:5000"
